<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:rowCount="6"
    android:useDefaultMargins="true">

    <EditText
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_columnSpan="4"
        android:layout_rowWeight="1"
        android:autofillHints=""
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="@dimen/display_text_size"
        android:gravity="end|bottom"
        android:inputType="none"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/clear"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_plus_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/plus_or_minus"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/percent"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/divide"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_7"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_8"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_9"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/multiply"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_4"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_5"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_6"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/minus"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_1"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_2"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_3"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/plus"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnSpan="2"
        android:layout_columnWeight="2"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/_0"
        android:textSize="@dimen/button_text_size" />

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/dot"
        android:textSize="@dimen/button_text_size"/>

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/equals"
        android:textSize="@dimen/button_text_size"/>

</GridLayout>